Fix scrolling issue with control bar visibility

--- a/web/less/room.less
+++ b/web/less/room.less
@@ -180,6 +180,7 @@ body {
 #screen {
   visibility: hidden;
   position: relative;
+  overflow: hidden;
 }
 
 .add-to-call-modal {
